# lazy-harness

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.claude/commands/: cleanup-worktree.md  new-worktree.md  tdd-check.md
.github/: PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  release-please.yml
docs/: backlog.md  index.md  roadmap.md
docs/architecture/: overview.md
docs/getting-started/: first-run.md  install.md  migrating.md
docs/history/: genesis.md
docs/how/: hooks.md  knowledge-pipeline.md  memory-compound.md  metrics-ingest.md  profiles-and-deploy.md
docs/reference/: cli.md  config.md
docs/why/: memory-model.md  philosophy.md  problem.md
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
specs/: README.md  backlog.md
specs/adrs/: 001-hybrid-architecture.md  002-python-uv-distribution.md  003-toml-config-format.md  004-agent-adapter-pattern.md  005-xdg-first-paths.md  006-hooks-subprocess-json.md  007-parallel-bootstrap-migration.md  008-compound-loop-async-worker.md  011-session-export-and-classification.md  013-scheduler-unified-backends.md  017-selftest-as-health-check.md  018-config-discoverability.md  019-handoff-session-end-freshness.md  020-post-compact-context-reinjection.md  021-async-response-grading.md  022-engram-episodic-memory.md  023-graphify-code-structure.md  024-mcp-server-orchestration.md  025-doctor-features-section.md  026-config-wizards.md  027-memory-stack-overview.md  028-classify-rules-configurable.md  029-engram-persist-deterministic-mirror.md  030-memory-stack-glue-layer.md  031-default-hooks-merge.md  032-agent-adapter-completeness.md  033-llm-backend-abstraction.md  034-okf-knowledge-producer.md  README.md
specs/analyses/: 2026-04-16-harnessing-literature-review.md
specs/archive/: README.md
specs/designs/: 2026-04-13-compound-loop-insight-capture.md  2026-04-14-plugin-system-metrics-sink-design.md  2026-04-17-security-hooks-cluster-design.md  2026-04-22-post-compact-hook-design.md  2026-05-04-engram-persist-hook-design.md  (+1 more)
templates/: config.toml.default
tests/: conftest.py
(+298 files in other folders)
