[project]
name = "lazy-harness"
version = "0.10.0"
description = "A cross-platform harnessing framework for AI coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "httpx>=0.28.1",
    "rich>=13.0",
    "tomli-w>=1.0",
]

[project.scripts]
lh = "lazy_harness.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lazy_harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# LLM prompt content — multiline f-string ported verbatim; wrapping would
# change the calibrated instructions sent to the evaluator.
"src/lazy_harness/knowledge/compound_loop.py" = ["E501"]
# Test fixtures reproduce real LLM responses and session transcripts
# verbatim; wrapping them obscures the data shape under test.
"tests/unit/test_compound_loop.py" = ["E501"]
"tests/unit/test_session_export.py" = ["E501"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpserver>=1.1.5",
    "ruff>=0.4",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
    "mkdocs-glightbox>=0.3",
]
